--- a/src/ApiDDD.Web/ApiDDD.Web.csproj
+++ b/src/ApiDDD.Web/ApiDDD.Web.csproj
@@ -4,8 +4,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Luiz Eugênio\source\repos\ApiDDD\src\ApiDDD.Web\ApiDDD.Web.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiDDD.CrossCutting\ApiDDD.CrossCutting.csproj" />
+    <ProjectReference Include="..\ApiDDD.Domain\ApiDDD.Domain.csproj" />
+    <ProjectReference Include="..\ApiDDD.Service\ApiDDD.Service.csproj" />
   </ItemGroup>
 
 
