--- a/src/ApiDDD.Service/ApiDDD.Service.csproj
+++ b/src/ApiDDD.Service/ApiDDD.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ApiDDD.Data\ApiDDD.Data.csproj" />
     <ProjectReference Include="..\ApiDDD.Domain\ApiDDD.Domain.csproj" />
   </ItemGroup>
