--- a/test/ApiDDD.Data.Test/ApiDDD.Data.Test.csproj
+++ b/test/ApiDDD.Data.Test/ApiDDD.Data.Test.csproj
@@ -15,10 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ApiDDD.CrossCutting\ApiDDD.CrossCutting.csproj" />
-    <ProjectReference Include="..\src\ApiDDD.Data\ApiDDD.Data.csproj" />
-    <ProjectReference Include="..\src\ApiDDD.Domain\ApiDDD.Domain.csproj" />
-    <ProjectReference Include="..\src\ApiDDD.Web\ApiDDD.Web.csproj" />
+    <ProjectReference Include="..\..\src\ApiDDD.CrossCutting\ApiDDD.CrossCutting.csproj" />
+    <ProjectReference Include="..\..\src\ApiDDD.Data\ApiDDD.Data.csproj" />
+    <ProjectReference Include="..\..\src\ApiDDD.Domain\ApiDDD.Domain.csproj" />
+    <ProjectReference Include="..\..\src\ApiDDD.Web\ApiDDD.Web.csproj" />
   </ItemGroup>
 
 </Project>
