--- a/ApiDDD.Application.Test/ApiDDD.Application.Test.csproj
+++ b/ApiDDD.Application.Test/ApiDDD.Application.Test.csproj
@@ -9,16 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Faker.NETCore" Version="1.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ApiDDD.CrossCutting\ApiDDD.CrossCutting.csproj" />
-    <ProjectReference Include="..\..\src\ApiDDD.Data\ApiDDD.Data.csproj" />
-    <ProjectReference Include="..\..\src\ApiDDD.Domain\ApiDDD.Domain.csproj" />
-    <ProjectReference Include="..\..\src\ApiDDD.Web\ApiDDD.Application.csproj" />
+    <ProjectReference Include="..\src\ApiDDD.Domain\ApiDDD.Domain.csproj" />
+    <ProjectReference Include="..\src\ApiDDD.Service\ApiDDD.Service.csproj" />
+    <ProjectReference Include="..\src\ApiDDD.Web\ApiDDD.Application.csproj" />
   </ItemGroup>
 
 </Project>
